--- a/css/style.css
+++ b/css/style.css
@@ -1,25 +1,24 @@
-section#main {
-	background-color: #a400ae;
-	height: 30vh;
+body {
+	background-color: skyblue; 
 }
-h2 {
-	color: #fff;
-	text-transform: uppercase;
-}
-.main_header {
-	margin-top: 5%;
 
-}
-section#example {
-	height: 100vh;
-	padding-top: 50px;
-
-}
 .box {
-	height: 100px;
-	border: 2px solid #000;
+	background-color: white;
+	border: 2px solid grey;
+	width: 300px;
+	height: 400px;
+	position: fixed;
+	opacity: 0.9;
+	left: 50%;
+	top: 50%;
+	margin-top: -200px;
+	margin-left: -150px;
+	
 }
-.box_in {
-	height: 50px;
-	background: green;
+.col-sm-6 {
+	padding-right: 30px;
+	padding-left: 30px;
+	padding-top: 20px;
+	padding-bottom: 20px;
 }
+
