--- a/Zaytceva_lesson19/css/style.less
+++ b/Zaytceva_lesson19/css/style.less
@@ -526,6 +526,16 @@ footer {
     height: 38%;
     margin-bottom: 2%;
   }
+  .services {
+    &-info {
+      h4 {
+      font-size: 20px;
+      }
+    }
+    &-img {
+      margin-top: 8%;
+    }
+  }
 }
 
 @media (min-width: 481px) and (max-width: 767px) {
@@ -546,6 +556,16 @@ footer {
   }
   .works-box {
     height: 20%;
+  }
+  .services {
+    &-info {
+      h4 {
+      font-size: 24px;
+      }
+    }
+    &-img {
+      margin-top: 8%;
+    }
   }
 }
 
