--- a/Zaytceva_lesson19/css/style.less
+++ b/Zaytceva_lesson19/css/style.less
@@ -590,6 +590,11 @@ footer {
     height: 210px;
     margin-bottom: 6%;
   }
+  .services {
+    &-img {
+      margin-top: 5%;
+    }
+  }
 }
 
 
@@ -609,6 +614,11 @@ footer {
   .works-box {
     height: 285px;
     margin-bottom: 3%;
+  }
+  .services {
+    &-img {
+      margin-top: 5%;
+    }
   }
 }
 
