--- a/Zaytceva_lesson21/css/style.less
+++ b/Zaytceva_lesson21/css/style.less
@@ -211,7 +211,7 @@ header {
     transform: translateY(4px);
   }
 }
-/* .main-nav-bar:hover {
+.main-nav-bar:hover {
   .line {
     -webkit-transform: rotate (90deg);
     -moz-transform: rotate (90deg);
@@ -232,7 +232,7 @@ header {
       transform: rotate(45deg);
     }
   }
-} */
+}
 
 /*process section*/
 .process {
